@@ -185,3 +185,4 @@ Added Andesite Mesh & Dirt Waterlogged Create Sifting Recipe.
 Added to Pam's Harvestcraft Questline.
 Added quests in Create chapter (rose quartz, electron tube, deployer, precision mechanism, mechanical arm, rotation speed controller).
 Started Immersive Engineering questline.
+Doubled wire output in Immersive Engineering metal press to incentivize user to get metal press (beyond cheaper Create Saw).
